static/css/custom.css
hr {
	background-color: #353535;
	border: 0;
	height: 0.1em;
	margin: 24px 0;
	padding: 0;
}

@media print {
	nav {
		display: none;
	}

	footer {
		display: none;
	}

	.post-title {
		font-size: 3rem;
	}

	a {
		text-decoration-line: underline;
		text-decoration-style: dotted;
		color: inherit;
	}
}

@page {
	margin: 1in;
}

.inline-svg {
	display: inline-block;
	height: 1.15rem;
	width: 1.15rem;
	top: 0.15rem;
	position: relative;
}

.inline-svg svg {
	width: 100%;
	height: 100%;
}

.inline-img {
	display: inline-block;
	height: 1.15rem;
	width: 1.15rem;
	top: 0.15rem;
	position: relative;
	margin: 0px;
}

.inline-img-large {
	display: inline-block;
	height: 1.5rem;
	width: 1.5rem;
	top: 0.38rem;
	position: relative;
	margin: 0px;
}

body {
	color: #394B59;
}

h1, h2, h3, h4, h5, h6, .catalogue-title, .nav-title, .catalogue-item {
	color: #394B59;
}

hr {
	background-color: #394B59;
}

.post-title {
	color: #394B59;
}

.catalogue-line, .post-line {
	border-top-color: #FF66A1;
}

.nav-title, .nav a, .nav a img {
	color: #fff;
}

.nav .inline-icon {
	background-color: #fff;
}

a {
	color: #FF66A1;
}

.nav {
	background-color: #FF66A1;
}

.inline-icon {
	display: inline-block;
	position: relative;
	margin: 0px;
	-webkit-mask-size: cover !important;
	mask-size: cover !important;
	-webkit-mask-repeat: no-repeat;
	mask-repeat: no-repeat;
	-webkit-mask-position: 0 0;
	mask-position: 0 0;
}

.inline-icon::before {
	content: ""
}

.icon-32 {
	width: 32px;
	height: 32px;
}

.icon-24 {
	width: 24px;
	height: 24px;
	margin-bottom: -6px;
}

.icon-github {
	-webkit-mask-image: url('../icons/octicons/mark-github.svg');
	mask-image: url('../icons/octicons/mark-github.svg');
}

.icon-linkedin {
	-webkit-mask-image: url('../icons/linkedin-in-brands.svg');
	mask-image: url('../icons/linkedin-in-brands.svg');
}

.icon-resume {
	-webkit-mask-image: url('../icons/octicons/file.svg');
	mask-image: url('../icons/octicons/file.svg');
	-webkit-mask-size: auto 107% !important;
	mask-size: auto 107% !important;
	-webkit-mask-position: 0 0.5px !important;
	mask-position: 0 0.5px !important;
}

.icon-quote {
	-webkit-mask-image: url('../icons/octicons/quote.svg');
	mask-image: url('../icons/octicons/quote.svg');
	-webkit-mask-position: 0 -1px !important;
	mask-position: 0 -1px !important;
}

.background-coffee::before {
	content:"";
}
.background-coffee {
	width: 256px;
	height: 256px;
	position: relative;
	background-image: url("../background-coffee.png");
	background-repeat: no-repeat;
	background-size: 256px 256px;
	opacity: 0.2;
	z-index: 0;
	margin-top: -256px;
	margin-right: 32px;
	margin-left: auto;
}

.hero-quote {
	position: relative;
	margin-top: 4rem;
	margin-bottom: 4rem;
}

.hero-quote-inner {
	/* margin: 4rem; */
	margin-left: 4rem;
	margin-right: 4rem;
	position: relative;
	text-align: center;
}

.hero-quote-marks {
	width: 32px;
	height: 32px;
	position: absolute;
}

.hero-quote-marks-close {
	width: 32px;
	height: 32px;
	position: absolute;
	right: 0px;
	bottom: 64px;
}

.rotate-180 {
	transform: rotate(180deg);
	-webkit-transform: rotate(180deg);
}

.hero-quote-marks .inline-icon {
	background-color: #394B59;
}

.hero-quote-marks-close .inline-icon {
	background-color: #394B59;
}

